Fixed collapse, nav and project overlay bug

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -178,6 +178,7 @@ p {
   display: flex;
   align-items: center;
   justify-content: center;
+  max-width: 350px;
 }
 
 .item-overlay.top {
